# pdfRAG

./: pyproject.toml
pdfRAG/: download_model.py
