[project]
name = "pdfrag"
version = "0.1.0"
description = ""
authors = [
    {name = "Giftson"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "huggingface-hub (>=0.29.1,<0.30.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
